# FastAPI

./: README.md  pyproject.toml
todo/: main.py
todo/Crud/: README.md  pyproject.toml
todo/Crud/todo/: main.py
