[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Vishnu Kumar <161946782+Vishnukrchy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api

[tool.poetry.scripts]
dev="todo.main:start"
